objects/Royalty__c.object
<CustomObject>
    <description>Represents the details related to Tensilica quote royalty.</description>
    <fields>
        <fullName>Core_type__c</fullName>
        <label>Tier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Number__c</fullName>
        <description>Defines the sort order of an item.</description>
        <inlineHelpText>Defines the sort order of an item.</inlineHelpText>
        <label>Line Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <label>Quote</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Royalties</relationshipLabel>
        <relationshipName>Royalties</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Rate_Or_Fee__c</fullName>
        <description>Represents royalty and core fee.</description>
        <inlineHelpText>Enter royalty or core fee depending on the core type.</inlineHelpText>
        <label>Rate/Fee</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipment_Criteria__c</fullName>
        <label>Shipment Volume</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Royalty</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>R-{00000}</displayFormat>
        <label>Royalty Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Royalties</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>